--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "preinstall": "npm i -g expo"
   },
   "jest": {
     "preset": "jest-expo"
