--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll",
-    "preinstall": "npm i -g expo"
+    "preinstall": "npm i expo"
   },
   "jest": {
     "preset": "jest-expo"
